--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "ecommerceapp",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@rails/actioncable": "^6.0.0-alpha",
+    "@rails/actiontext": "^6.0.5-1",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "4.3.0",
+    "@rails/webpacker": "^5.4.3",
+    "bootstrap": "4.6.0",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
