--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/local_env.yml
 
 /public/packs
 /public/packs-test
@@ -33,3 +34,5 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+
